[package]
name = "randomx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.0.0-rc.1"
num_cpus = "1.15.0"
thiserror = "1.0.38"
parking_lot = "0.12.1"
memmap2 = "0.5.8"
libc = "0.2.139"
[dev-dependencies]
hex = "0.4.3"
[build-dependencies]
bindgen = "0.63.0"
cmake = "0.1.49"